@@ -42,7 +42,6 @@ import (
 	_ "github.com/mozilla-services/heka/plugins/tcp"
 	_ "github.com/mozilla-services/heka/plugins/udp"
 	"io/ioutil"
-	"log"
 	"os"
 	"path/filepath"
 	"runtime"
@@ -111,15 +110,15 @@ func main() {
 
 	config, err = LoadHekadConfig(*configPath)
 	if err != nil {
-		log.Fatal("Error reading config: ", err)
+		pipeline.LogError.Fatal("Error reading config: ", err)
 	}
 	if config.SampleDenominator <= 0 {
-		log.Fatalln("'sample_denominator' value must be greater than 0.")
+		pipeline.LogError.Fatalln("'sample_denominator' value must be greater than 0.")
 	}
 	globals, cpuProfName, memProfName := setGlobalConfigs(config)
 
 	if err = os.MkdirAll(globals.BaseDir, 0755); err != nil {
-		log.Fatalf("Error creating 'base_dir' %s: %s", config.BaseDir, err)
+		pipeline.LogError.Fatalf("Error creating 'base_dir' %s: %s", config.BaseDir, err)
 	}
 
 	if config.PidFile != "" {
@@ -127,7 +126,7 @@ func main() {
 		if err == nil {
 			pid, err := strconv.Atoi(strings.TrimSpace(string(contents)))
 			if err != nil {
-				log.Fatalf("Error reading proccess id from pidfile '%s': %s", config.PidFile, err)
+				pipeline.LogError.Fatalf("Error reading proccess id from pidfile '%s': %s", config.PidFile, err)
 			}
 
 			process, err := os.FindProcess(pid)
@@ -135,25 +134,25 @@ func main() {
 			// on Windows, err != nil if the process cannot be found
 			if runtime.GOOS == "windows" {
 				if err == nil {
-					log.Fatalf("Process %d is already running.", pid)
+					pipeline.LogError.Fatalf("Process %d is already running.", pid)
 				}
 			} else if process != nil {
 				// err is always nil on POSIX, so we have to send the process
 				// a signal to check whether it exists
 				if err = process.Signal(syscall.Signal(0)); err == nil {
-					log.Fatalf("Process %d is already running.", pid)
+					pipeline.LogError.Fatalf("Process %d is already running.", pid)
 				}
 			}
 		}
 		if err = ioutil.WriteFile(config.PidFile, []byte(strconv.Itoa(os.Getpid())),
 			0644); err != nil {
 
-			log.Fatalf("Unable to write pidfile '%s': %s", config.PidFile, err)
+			pipeline.LogError.Fatalf("Unable to write pidfile '%s': %s", config.PidFile, err)
 		}
-		log.Printf("Wrote pid to pidfile '%s'", config.PidFile)
+		pipeline.LogInfo.Printf("Wrote pid to pidfile '%s'", config.PidFile)
 		defer func() {
 			if err = os.Remove(config.PidFile); err != nil {
-				log.Printf("Unable to remove pidfile '%s': %s", config.PidFile, err)
+				pipeline.LogError.Printf("Unable to remove pidfile '%s': %s", config.PidFile, err)
 			}
 		}()
 	}
@@ -161,7 +160,7 @@ func main() {
 	if cpuProfName != "" {
 		profFile, err := os.Create(cpuProfName)
 		if err != nil {
-			log.Fatalln(err)
+			pipeline.LogError.Fatalln(err)
 		}
 
 		pprof.StartCPUProfile(profFile)
@@ -175,7 +174,7 @@ func main() {
 		defer func() {
 			profFile, err := os.Create(memProfName)
 			if err != nil {
-				log.Fatalln(err)
+				pipeline.LogError.Fatalln(err)
 			}
 			pprof.WriteHeapProfile(profFile)
 			profFile.Close()
@@ -185,7 +184,7 @@ func main() {
 	// Set up and load the pipeline configuration and start the daemon.
 	pipeconf := pipeline.NewPipelineConfig(globals)
 	if err = loadFullConfig(pipeconf, configPath); err != nil {
-		log.Fatal("Error reading config: ", err)
+		pipeline.LogError.Fatal("Error reading config: ", err)
 	}
 	pipeline.Run(pipeconf)
 }
